# fincen-chat

./: .env  .gitignore  README.md  docker-compose.yml  logging_config.yaml  mise.toml  pyproject.toml  setup_db.sh
backend/evals/: evaluators.py  run_evals.py  task.py
backend/evals/datasets/: fincen_cases.yaml
backend/scripts/: init_db.sql
backend/src/fincen_agent/: agent.py  chat_repo.py  config.py  db.py  main.py  models.py  server.py
backend/src/fincen_chat/: agent.py  chat_repo.py  config.py  db.py  log_config.py  main.py  models.py  server.py  tracing.py
backend/src/fincen_chat/investigation/: agents.py  models.py  router.py  worker.py  workflows.py
backend/tests/: test_chat_repo.py
eval_results/: 20260312_104328_eval_results.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
scripts/: fincen_csv.cypher
src/lpa/: db.py  main.py
