[project]
name = "fincen-chat"
version = "0.1.0"
description = "Chat with the FinCEN data"
readme = "README.md"
authors = [
  { name = "Chris", email = "8133496+chriswmann@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.134.0",
  "neo4j>=6.1.0",
  "pydantic-ai>=1.63.0",
  "pydantic-settings>=2.13.1",
  "asyncpg>=0.31.0",
  "uvicorn>=0.41.0",
  "pyyaml>=6.0.3",
  "opentelemetry-api>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-exporter-otlp>=1.39.1",
]
